--- a/arouter-api/build.gradle
+++ b/arouter-api/build.gradle
@@ -39,8 +39,10 @@ android {
 }
 
 dependencies {
-    annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
-    compile 'com.alibaba:arouter-annotation:1.0.4'
+//    annotationProcessor 'com.alibaba:arouter-compiler:1.1.4'
+//    compile 'com.alibaba:arouter-annotation:1.0.4'
+    compile project(':arouter-annotation')
+    annotationProcessor project(':arouter-compiler')
     compile "com.android.support:support-v4:${SUPPORT_LIB_VERSION}"
 }
 
