--- a/arouter-compiler/build.gradle
+++ b/arouter-compiler/build.gradle
@@ -14,13 +14,18 @@ compileJava {
 }
 
 dependencies {
-    compile 'com.alibaba:arouter-annotation:1.0.4'
-
+    //    compile 'com.alibaba:arouter-annotation:1.0.4'
     compile 'com.google.auto.service:auto-service:1.0-rc2'
     compile 'com.squareup:javapoet:1.7.0'
-
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'org.apache.commons:commons-collections4:4.1'
+    compile project(path: ':arouter-annotation')
+    compile 'org.freemarker:freemarker:2.3.27-incubating'
+    compile 'org.apache.logging.log4j:log4j:2.9.1'
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
 
 apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
